--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ a {
 .welcome-section {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../img/background.jpg") center no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../img/background.png") center no-repeat;
     background-size: cover;
     background-attachment: fixed;
     display: flex;
